--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,1 +1,4 @@
-<h1>Sociology/ <%= locals.title %> </h1>
+<link rel="stylesheet" href="/css/profile.css">
+<h1>
+  Sociology/ <%= locals.title %> 
+</h1>
