Add the sign-up, login page and some minior things

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,12 @@
 <footer>
-  Page footer
+  <div id="socil-media-corner">
+    <ul id="social-media-list">
+      <li><a href="https://www.instagram.com/" class="social-icon"><i class="bi bi-instagram"></i></a></li>
+      <li><a href="https://www.facebook.com/" class="social-icon"><i class="bi bi-facebook"></i></a></li>
+      <li><a href="https://twitter.com/login?lang=en" class="social-icon"><i class="bi bi-twitter"></i></a></li>
+      <li><a href="https://www.youtube.com/" class="social-icon"><i class="bi bi-youtube"></i></a></li>
+  
+    </ul>
+  </div>
+
 </footer>
