signup form made and login form has some changes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
       <button type="submit">Login</button>
 
       <p id="Forget-password"><a href="">Forget Your Password?</a></p>
-      <p id="Sign-up-asking">Don't have an account?&nbsp<span><a href="user_signup.ejs">Sign-up</a></span></p>
+      <p id="Sign-up-asking">Don't have an account?&nbsp<span><a href="/users/sign-up">Sign-up</a></span></p>
     </form>
   </div>
 </div>
