--- a/assets/css/user_signup.css
+++ b/assets/css/user_signup.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #FF7722;
+}
+
 h1{
   text-align: center;
 }
@@ -7,13 +11,14 @@ h1{
   flex-direction: column;
   margin: auto;
   border: 1px solid lightgray;
+  width: 40%;
+  height: 40%;
 }
 
 input{
-  height: 4vh;
   padding: 3px;
   height: 4vh;
-  margin: auto auto 10vh auto;
+  margin: auto auto 5vh auto;
   width: 90%;
   font-size: large;
   background-color: rgb(241, 222, 241);
@@ -21,7 +26,7 @@ input{
 
 button{
   width: 90%;
-  margin: auto;
+  margin: auto auto 2vh auto;
   height: 4vh;
   background-color: #21AAFF;
   color: azure;
@@ -37,3 +42,182 @@ label{
   margin: auto;
   font-size: larger;
 }
+  
+footer{
+  margin-top: 10vh;
+}
+
+#social-media-list{
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.social-icon{
+  color: #0c6197;
+  font-size: xx-large;
+}
+
+p{
+  text-align: center;
+  font-size: large;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+  #sign-up{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    border: 1px solid lightgray;
+    width: 90%;
+    height: 40%;
+  }
+
+  input{
+    height: 5vh;
+    padding: 3px;
+    margin: auto auto 4vh auto;
+    width: 85%;
+    font-size: large;
+    background-color: rgb(241, 222, 241);
+  }
+
+  button{
+    width: 70%;
+    margin: auto auto 2vh auto;
+    height: 5vh;
+    background-color: #21AAFF;
+    color: azure;
+    font-size: large;
+  }
+
+}
+
+
+@media only screen and (min-width: 600px) {
+  #sign-up{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    border: 1px solid lightgray;
+    width: 90%;
+    height: 40%;
+  }
+
+  input{
+    padding: 3px;
+    height: 10vh;
+    margin: auto auto 4vh auto;
+    width: 85%;
+    font-size: large;
+    background-color: rgb(241, 222, 241);
+  }
+
+  button{
+    width: 70%;
+    margin: auto auto 2vh auto;
+    height: 10vh;
+    background-color: #21AAFF;
+    color: azure;
+    font-size: large;
+  }
+}
+
+
+@media only screen and (min-width: 768px) {
+  #sign-up{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    border: 1px solid lightgray;
+    width: 90%;
+    height: 40%;
+  }
+
+  input{
+    padding: 3px;
+    height: 8vh;
+    margin: auto auto 4vh auto;
+    width: 80%;
+    font-size: large;
+    background-color: rgb(241, 222, 241);
+  }
+
+  button{
+    width: 70%;
+    margin: auto auto 2vh auto;
+    height: 8vh;
+    background-color: #21AAFF;
+    color: azure;
+    font-size: large;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  #sign-up{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    border: 1px solid lightgray;
+    width: 40%;
+    height: 40%;
+  }
+  
+  input{
+    padding: 3px;
+    height: 6vh;
+    margin: auto auto 5vh auto;
+    width: 90%;
+    font-size: large;
+    background-color: rgb(241, 222, 241);
+  }
+  
+  button{
+    width: 90%;
+    margin: auto auto 2vh auto;
+    height: 6vh;
+    background-color: #21AAFF;
+    color: azure;
+    font-size: large;
+  }
+}
+  
+@media only screen and (min-width: 1200px) {
+  #sign-up{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    border: 1px solid lightgray;
+    width: 40%;
+    height: 40%;
+  }
+  
+  input{
+    padding: 3px;
+    height: 4vh;
+    margin: auto auto 5vh auto;
+    width: 90%;
+    font-size: large;
+    background-color: rgb(241, 222, 241);
+  }
+  
+  button{
+    width: 90%;
+    margin: auto auto 2vh auto;
+    height: 4vh;
+    background-color: #21AAFF;
+    color: azure;
+    font-size: large;
+  }
+}
+  
+  
+  
+  
+  
+  
+  
+  
+  
