--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -19,6 +19,7 @@
     <input type="password" name="confirm_password" id="password-user-confirmed">
 
     <button type="submit">Sign-up</button>
+    <p>Already have an account? <a href="/">Login here</a></p>
   </form>
 </div>
 
