Feature to signup has been added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
   </div>
   <div id="login-form">
     <h1 id="login-form-heading">Login to your account</h1>
-    <form action="/users/create-session" id="display-form" method="POST">
+    <form action="//create-session" id="display-form" method="POST">
       <label for="login-email">Email Address</label>
       <input type="email" id="login-email" placeholder="abc123@exapmle.com" />
 
