--- a/views/user_signup.ejs
+++ b/views/user_signup.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/user_signup.css">
 <div id="signup-form">
   <h1>Sign-up</h1>
-  <form action="/user/create" id="sign-up" method="POST">
+  <form action="/users/create" id="sign-up" method="POST">
 
     <label for="name-user">Enter your Name</label>
     <input type="text" name="name" id="name-user">
@@ -10,7 +10,7 @@
     <input type="email" name="email" id="email-user">
 
     <label for="date-of-birth-user">Enter your date of birth</label>
-    <input type="date" name="date-of-birth" id="date-of-birth-user">
+    <input type="date" name="dateofbirth" id="date-of-birth-user">
 
     <label for="password-user">Enter your password</label>
     <input type="password" name="password" id="password-user">
