--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,16 @@
 <header>
   Page Header
+
+
+  <ul>
+    <% if (locals.user){ %>
+      <li><a href="/users/profile"><%= user.name %></a></li>
+      <li>
+        <a href="/users/sign-out">Logout</a>
+      </li>
+    <% }else{ %>
+      <li><a href="/users/login">Login</a></li>
+      <li><a href="/users/sign-up">Signup</a></li>
+    <% } %>  
+  </ul>
 </header>
