--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,9 +19,9 @@
     <%- style %>
   </head>
   <body>
-    <!-- <%- include('_header') %>  -->
+    <%- include('_header') %>
     <%- body %>
-    <!-- <%- include('_footer') %>  -->
+    <%- include('_footer') %>
 
     <%- script %>
     <script
