--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,12 +15,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="/css/layout.css" />
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <%- style %>
   </head>
   <body>
     <%- include('_header') %>
-    <%- body %>
+    <main id="layout-main">
+      <%- body %>
+    </main>
     <%- include('_footer') %>
 
     <%- script %>
