--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,42 @@
 <h1>Home</h1>
+<% if(locals.user){ %>
+<section id="feed-post">
+  <h4>Posts</h4>
+  <form action="/posts/create" id="new-post-form" method="POST">
+    <textarea name="content" id="" cols="30" rows="3" required></textarea>
+    <input type="submit" value="Post" />
+  </form>
+  <div id="posts-list-container">
+    <ul>
+      <% for(post of posts){ %>
+      <li>
+        <%= post.content %>
+        <small> <%= post.user.name %> </small>
+      </li>
+      <div class="post-comments">
+        <% if(locals.user){ %>
+          <form action="/comments/create" method="POST">
+            <input type="text" name="content" placeholder="Type here to comment..." required>
+            <input type="hidden" name="post" value="<%= post._id %>">
+            <input type="submit" value="Add comment">
+          </form>
+        <% } %> 
+        <div class="post-comments-list">
+          <ul id="post-comments-<%= post._id %> ">
+            <%for(comment of post.comments) {%>
+              <p>
+                <%= comment.content %>
+                <br>
+                <small>
+                  <%= comment.user.name %> 
+                </small> 
+              </p>
+            <% } %> 
+          </ul>
+        </div> 
+      </div>
+      <% } %>
+    </ul>
+  </div>
+</section>
+<% } %>
