Delete post and comment and home page reworked :)

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -5,6 +5,7 @@ footer #social-media-list {
   font-size: x-large;
   background-color: rgb(164, 154, 154);
   margin-bottom: 0%;
+  width: 100%;
 }
 
 /*# sourceMappingURL=footer.css.map */
