--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,23 +1,5 @@
-header ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  background-color: rgb(50, 50, 235);
-  height: 6vh;
-  align-items: center;
-}
-header ul div {
-  display: flex;
-  font-size: larger;
-  color: beige;
-}
-header ul li {
-  margin-right: 8px;
-}
-header ul li a {
-  font-size: large;
-  color: beige;
-  text-decoration: none;
+header .navbar {
+  background-color: rgb(132, 220, 249);
 }
 
 /*# sourceMappingURL=header.css.map */
