--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,7 +1,7 @@
-<li>
+<li id="comment-<%= comment._id %>">
   <p>
     <% if(locals.user && locals.user.id==comment.user.id){ %>
-    <small><a href="/comments/destroy/<%= comment.id %> ">X</a></small>
+    <small><a class="delete-comment-button" href="/comments/destroy/<%= comment.id %> ">X</a></small>
     <% } %> <%= comment.content %>
     <br />
     <small> <%= comment.user.name %> </small>
