--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,12 +1,17 @@
 <footer>
-  <div id="socil-media-corner">
-    <ul id="social-media-list">
-      <li><a href="https://www.instagram.com/" class="social-icon"><i class="bi bi-instagram"></i></a></li>
-      <li><a href="https://www.facebook.com/" class="social-icon"><i class="bi bi-facebook"></i></a></li>
-      <li><a href="https://twitter.com/login?lang=en" class="social-icon"><i class="bi bi-twitter"></i></a></li>
-      <li><a href="https://www.youtube.com/" class="social-icon"><i class="bi bi-youtube"></i></a></li>
+
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <p>Follow the developer at instagram for updates and to give feedback. </p>
+        <span class="mb-3 mb-md-0 text-muted">© 2023 Company, All right reserved Inc</span>
+      </div>
   
-    </ul>
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="https://mail.google.com/mail/u/0/#inbox?compose=new"><i class="bi bi-instagram"></i></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://mail.google.com/mail/u/0/#inbox"><i class="bi bi-envelope"></i></a></li>
+      </ul>
+    </footer>
   </div>
 
 </footer>
