--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,17 +1,34 @@
 <header>
-  <ul>
-    <div><li>Sociology</li></div>
-
-    <% if (locals.user){ %>
-    <li><a href="/users/profile"><%= user.name %></a></li>
-    <li>
-      <a href="/users/sign-out">Logout</a>
-    </li>
-    <% }else{ %>
-    <div>
-      <li><a href="/users/login">Login</a></li>
-      <li><a href="/users/sign-up">Signup</a></li>
+  <nav class="navbar navbar-expand-lg bg-body-info">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Sociology</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <% if (locals.user){ %>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/users/profile"><%= user.name %> </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/users/sign-out">Logout</a>
+          </li>
+          <% }else{ %>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/users/login">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/users/sign-up">Sign-up</a>
+            </li>
+          <% } %>  
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-    <% } %>
-  </ul>
+  </nav>
 </header>
