--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/home.css" />
 <% if(!locals.user){ %> <%- include('_unauthhome') %> <% } %>
-<!-- <h1>Home</h1> -->
+
 <div id="post-comment">
   <% if(locals.user){ %>
   <section id="feed-post">
@@ -19,9 +19,12 @@
     <h4>Friends</h4>
     <%for(u of all_users){ %>
     <p>
-      <a href="/users/profile/<%= u.id %> "><%= u.name %> </a>
+      <a href="/users/profile/<%= u.id %> "> <%= u.name %> </a>
     </p>
     <% } %>
   </section>
   <% } %>
 </div>
+
+<script src="/js/home_comments.js"></script>
+<script src="/js/home_posts.js"></script>
