--- a/views/_unauthhome.ejs
+++ b/views/_unauthhome.ejs
@@ -1,24 +1,15 @@
 <link rel="stylesheet" href="/css/unauthhome.css">
-<!-- <div id="unauth-home-container">
-  <div id="sociology-description">
-    <h1>Welcome to the Sociology</h1>
-    <h3>New Platform for being Social</h3>
-    <h2>Congratulation!! You are the alpha tester of this app. Please give your valuble feedback to help us grow.</h2>
+
+<div class="p-5 mb-4 bg-light rounded-3 first-container">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Welecome to Sociology</h1>
+    <p class="col-md-8 fs-4">This is a basic website of social-media. Where you can post/share your opinion/thought about things going on around you and your socitey <br> So what are you wating for join now!!</p>
+    <button><a id="Login-btn" href="/users/login">Login</a></button>
   </div>
-  <div id="platform-img">
-    <img src="https://images.unsplash.com/photo-1611301040782-7373f08d2df7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8Ym95JTIwd2l0aCUyMHBob25lfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt="here is man with phone">
+  <div class="cover-image-container">
+    <img src="https://freepngimg.com/thumb/girl/139335-mobile-using-girl-happy-phone.png" alt="" id="first-img">
   </div>
- 
 </div>
-<br>
-<br>
-<div id="like-comment">
-  <h1>Like your friends/family posts</h1>
-  <h3>Start connecting with our platform</h3>
-  <div id="like-comment-img">
-    <img src="https://media.tenor.com/WffyEuSmaQkAAAAM/like-instagram-muitos-likes.gif" alt="">
-  </div>
-</div> -->
 
 
 
